--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,30 @@
     <version>1.0.0</version>
 
     <dependencies>
+        <!--introduced in listing 1.02 to test a method in a Unit test-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!--introduced in listing 1.02 to test a method with a mock-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
+        <!--introduced in listing 1.08 for launching a spring context-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
+        <!--introduced in listing 1.10 for aop-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.11</version>
+        </dependency>
     </dependencies>
-
 </project>
