--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,17 @@
             <artifactId>spring-context</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
-        <!--introduced in listing 1.10 for aop-->
+        <!--introduced in listing 1.10 for aop : spring uses aspectj proxies-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.6.11</version>
+        </dependency>
+        <!--introduced in listing 2.5 in order to test context loaded beans-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.0.1.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
