--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>re.play</groupId>
-    <artifactId>spring-in-action-2nd-ed</artifactId>
+    <artifactId>spring-in-action-3rd-ed</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
