--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-test</artifactId>
             <version>4.0.1.RELEASE</version>
         </dependency>
+        <!--introduced in 2.5.1.2 (setting up spring MVC) to reference AbstractAnnotationConfigDispatcherServletInitializer-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
