--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.2.RELEASE</version>
         </dependency>
+        <!-- Introduced with AbstractAnnotationConfigDispatcherServletInitializer -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -54,11 +60,6 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
-                <configuration>
-                    <systemProperties>
-                        <padoupadou>Youhou</padoupadou>
-                    </systemProperties>
-                </configuration>
             </plugin>
         </plugins>
     </build>
