--- a/pom.xml
+++ b/pom.xml
@@ -55,17 +55,10 @@
         </dependency>
         <!--Introduced with the JSP home.jsp in 02.05.02-->
         <dependency>
-            <groupId>javax.servlet.jsp.jstl</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-        <!--Introduced with the JSP home.jsp in 02.05.02-->
-        <dependency>
-            <groupId>javax.servlet.jsp.jstl</groupId>
-            <artifactId>jstl-api</artifactId>
-            <version>1.2</version>
-        </dependency>
-
 
     </dependencies>
 
