started 2.5.2.3 and arived at beginning of page 147

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <!--For EqualsBuilder and HashCodeBuilder-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
     </dependencies>
 
