--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
                 <version>3.0.0</version>
                 <configuration>
                     <packagingExcludes>WEB-INF/classes/_02_spring_on_the_web/_05_building_spring_web_applications/_01_getting_started_with_spring_mvc/**/*.class</packagingExcludes>
+                    <packagingExcludes>WEB-INF/classes/_02_spring_on_the_web/_05_building_spring_web_applications/_02_writing_a_simple_controller/**/*.class</packagingExcludes>
                 </configuration>
             </plugin>
         </plugins>
