--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
         <!--Introduced with the JSP home.jsp in 02.05.02-->
         <dependency>
